Python Created Content

--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,44 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Remembering William Cullen</h2>
+      <hr>
+      <h5>June 15, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2022-06-15_cullen-william/cullen-william_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>We learned that Mr. William Cullen passed away on May 21. He taught English at CCS from 1947 through 1964. He will be remembered by his Chateaugay students from those years as an excellent teacher and exemplary man. </p>
+<p>Rest in peace, sir.</p>
+
+<p><a href="https://www.dignitymemorial.com/obituaries/potsdam-ny/william-cullen-10786118?fbclid=IwAR3i_2htObVFCK1LRq0IEMZtshD2re8dZzHcwL85yHeOa38b_z3ZcyxBdUg" target="new">View Online Obituary Here</a></p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Population Changes in Chateaugay</h2>
       <hr>
       <h5>April 24, 2022 | Mick Jarvis</h5>
@@ -84,21 +122,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -127,7 +165,7 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Shopping in 1892</h2>
@@ -141,93 +179,93 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">10 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">11 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">12 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">13 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">14 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_14.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -249,69 +287,12 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>2022 Update - Newsletter & Summer Exhibit</h2>
-      <hr>
-      <h5>March 12, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Our first newsletter issue of 2022 will be mailed this coming Tuesday. This issue contains articles about: the two airplanes built in Chateaugay during the 60s and 70s, a history of all the businesses in the Jackson/Mitchell block (where Jimmy Mills moved to, on the corner of East Main and Depot) over the years since its construction in 1876, a reminiscence by Royal Nadeau of threshing day in the 40s, and the story of the Smith/Alvord/Cook house (Odie and Barb Cook's stone house) on East Main, from its construction in 1818, to the present.</p>
-
-<p>Lots to read and see (we have again included many, many illustrations and photos throughout the 28 pages). Members, watch your mailboxes!</p>
-
-<p>Also, planning continues for the summer exhibit. It will tell the story of the early years on Chateaugay Lake, from the first settlers through the later 1800s and the construction of the Forge dam, which changed the surface area of the Lakes and the Narrows and helped both the tourist and the iron mining industries thrive.</p>
-
-<p>The exhibit will highlight the early settlers, the earliest sporting visitors, the first schoolhouses, methods of transportation - on the lakes as well as to and from them, the seasonal Native American presence, as well as the Native legends of the Lakes, and a full-color, framed, and matted display of the seven A.F. Tait paintings and lithographs set in the Chateaugay Lakes area. Tait produced these works in the mid-1800s, when he was a frequent visitor to the Bellows House (later, the Banner House).</p>
-
-<p>Plan on visiting the Archival Center this summer to take it in! Opening date to be published here soon...</p>
-
-<p>As you can see, we have been (and will continue to be) busy producing content for both members and the general public - all made possible by your continued memberships and support.</p> 
-
-<p>Thank you so much!</p>
-
-<p>Above is an image of the first page from the upcoming issue. Also shown is an illustration a friend sent me. I think it's good for a chuckle or two.</p>
-
-<p>Think spring!!</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 26, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [June 28, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
