--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">Open Hours & Summer Exhibit</span>We are open for the season! Our summer exhibit, Early Chateaugay Lakes, will be open June 29 - September 28. Click <a href="CHS_ExhibitPoster_2022-Summer.pdf">HERE </a>to view our exhibit poster and learn more about it. At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
+    <span class="badge">Open Hours & Summer Exhibit</span>We are open for the season! At this time, masking is not required and is at the discretion of each individual. Thank you!
   </div>  
 </body>
  	
@@ -84,6 +84,28 @@
     </div>
   </nav>
 </div>
+
+<!-- 2022 Exhibit Announcement Section -->
+<div id="about">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>"Early Chateaugay Lake" Exhibit Now Open</h2>
+      <hr>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center"><img src="CHS_ExhibitPoster_2022-Summer.jpg" class="img-responsive"></div>
+      <div class="col-md-8 col-md-offset-2">
+        <div class="about-text">
+          <p>Our summer exhibit is open! The Archival Center on the second floor of the Town Hall will be open for the exhibit on every Wednesday and Saturday from 9am until noon until September 28 (except for the Saturdays during the 4th of July and Labor Day weekends). </p>
+
+					<p>We will also have several books for sale: Chateaugay Lake: the Resort Era 1830-1917 by Rev. Henry Ruschmeyer, Brainardsville by Janet Hoy Sterling, An Adirondack Boyhood Remembered by Ralph Hoy, and Early Sporting Visits to Chateaugay Lake published by the CHS.</p>
+
+					<p>Hope you can visit and check it out!</p>
+        </div>
+      </div>  
+  </div>
+</div>
+
 <!-- About Section -->
 <div id="about">
   <div class="container">
@@ -496,7 +518,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [April 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [June 28, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
