--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,61 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Excelsior Mills Addendum</h2>
+      <hr>
+      <h5>July 12, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I have been doing some follow-up research on the article I wrote on the three excelsior mills that were in town at the turn of the last century. The original article appeared in Vol. XII, Issue 3 of our newsletter in 2018. This post is not meant to be a comprehensive recap of the excelsior article but rather, additional material to supplement the original information.</p>
+
+<p>Excelsior is a little-known product today. Around the turn of the last century, it was a valuable commercial commodity.</p> 
+
+<p>The newly designed maps above will show where each of the mills was located in the vicinity of the railyard as it crossed Depot Street and paralleled Monroe Street.</p>
+
+<p>Any evidence of these mills is now long-gone but "back in the day", they represented sources of jobs and vital commercial income for Chateaugay.</p>
+
+<p>I remember an anthropology/archeology professor at SUNY Potsdam telling us that one of the main challenges that historians and researchers face is the way that modern man can alter the landscape and make it unrecognizable from its appearance in the past. I remember his quote: “You have to be ready to deal with modern man’s ability to move vast amounts of dirt!”</p>
+
+<p>In this case, we have to consider modern construction abilities as well and how the landscape of what was then the railyard and all its sidings, main tracks and buildings has changed over the years. The buildings parallel to Monroe Street that stand today are vastly different than those of 100 years ago.</p>
+
+<p>The first map shows the locations of the three mills on a set of 1912 insurance company maps. The second view is from a Google Earth image from 2022 with the mill locations superimposed over it.</p>
+
+<p>If you missed the newsletter this article appeared in, you can learn about Chateaugay’s excelsior industry. We have back issues of Vol. XII, Issue 3 (2018) available for purchase at the Archival Center.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Remembering William Cullen</h2>
       <hr>
       <h5>June 15, 2022 | Mick Jarvis</h5>
@@ -84,15 +139,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-06-15_cullen-william/cullen-william_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -108,7 +163,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Population Changes in Chateaugay</h2>
@@ -122,21 +177,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -164,135 +219,12 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Shopping in 1892</h2>
-      <hr>
-      <h5>March 27, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_11.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">12 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_12.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">13 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_13.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">14 / 14</div>
-    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_14.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Shopping—Some people love it, some people hate it. Whatever the case, shoppers want to know what is available and where to go to purchase it.</p> 
-
-<p>It was no different 130 years ago in Chateaugay. During this week in 1892, local shoppers had a wide range of goods available from a large number of retailers right here in town. </p>
-
-<p>Main Street, from the west end (about where White Street is today) to the east end (up to about where Quinlin’s was-Stewarts is now), was a busy and filled business district. There were shops in all the storefronts, as second floor walk-ups, and even behind the Main Street buildings. Shops extended down River Street, up Depot Street, and down John Street. The alley that used to be between Pearl’s and Alix’s even had a name: Union Avenue-which led to businesses in the back of the East Main Street buildings. </p>
-
-<p>Main Street was not yet paved and had hitching posts placed throughout the entire district as shoppers found plenty of places to tie up their teams as they shopped.</p>
-
-<p>The first two photos give us the flavor of Main Street back at that time. After that, are some of the ads that appeared in the Chateaugay Record during the third week of March 1892. </p>
-
-<p>People could meet all their needs with the wide variety of firms doing business in town. Even all the nationally advertised medications, tinctures and balms were available in the local pharmacies.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [June 28, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [July 15, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
