--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div id="about">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>"Early Chateaugay Lake" Exhibit Now Open</h2>
+      <h6>"Early Chateaugay Lake" Exhibit Now Open<br></h6>
       <hr>
     </div>
     <div class="row">
@@ -518,7 +518,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [June 28, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [July 15, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
