--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
 				<a href="https://www.findagrave.com/" target="new">Find A Grave</a>
 			</li>
 			<li>
-				<a href="http://freepages.genealogy.rootsweb.ancestry.com/~frgen/franklin/franklin_index.htm"
-			target="new">Franklin County NY Tombstone Transcriptions</a>
+				<a href="http://nnytombstoneproject.net"
+			target="new">Northern NY Tombstone Project</a>
 			</li>
 			<li>
 				<a href="http://nyshistoricnewspapers.org/#" target="new">New York Historic Newspapers</a>
@@ -518,7 +518,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [July 15, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [September 25, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
