--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 	
  <!--COVID Banner -->
-<body>
+<!--<body>
   <div class="alert-box">
     <span class="badge">Open Hours & Summer Exhibit</span>We are open for the season! At this time, masking is not required and is at the discretion of each individual. Thank you!
   </div>  
-</body>
+</body>-->
  	
 <!-- Header -->
 <header id="header">
@@ -89,18 +89,16 @@
 <div id="about">
   <div class="container">
     <div class="section-title text-center center">
-      <h6>"Early Chateaugay Lake" Exhibit Now Open<br></h6>
+      <h6>Thank You!<br></h6>
       <hr>
     </div>
     <div class="row">
       <div class="col-md-12 text-center"><img src="CHS_ExhibitPoster_2022-Summer.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Our summer exhibit is open! The Archival Center on the second floor of the Town Hall will be open for the exhibit on every Wednesday and Saturday from 9am until noon until September 28 (except for the Saturdays during the 4th of July and Labor Day weekends). </p>
+          <p>Our summer exhibit and regular open hours have come to an end for the 2022 season. Thank you to everyone who came to see us! We look forward to seeing you again next summer. </p>
 
-					<p>We will also have several books for sale: Chateaugay Lake: the Resort Era 1830-1917 by Rev. Henry Ruschmeyer, Brainardsville by Janet Hoy Sterling, An Adirondack Boyhood Remembered by Ralph Hoy, and Early Sporting Visits to Chateaugay Lake published by the CHS.</p>
-
-					<p>Hope you can visit and check it out!</p>
+					<p>Missed the exhibit but want to see it? The entire exhibit is available - panel by panel - in a photo album on our Facebook page. Please click <a href="https://www.facebook.com/media/set/?set=a.550420216881106&type=3" target="new">HERE </a> if you would like to view it.</p>
         </div>
       </div>  
   </div>
@@ -518,7 +516,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [September 25, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [September 28, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
