--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,75 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Remembering Father Donald Gallagher</h2>
+      <hr>
+      <h5>October 9, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 5</div>
+    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 5</div>
+    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 5</div>
+    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 5</div>
+    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 5</div>
+    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_05.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Father Donald Gallagher was pastor of St. Patrick's Church from 1954, following the untimely death of Father Ambrose Hyland, until his death in 1959.</p>
+
+<p>He graduated from Notre Dame University. He was the Senior Class president there. He was ordained in Rome and served throughout the North Country before coming to Chateaugay.</p>
+
+<p>He served in the Pacific Theater in the US Navy during WWII.</p>
+
+<p>I remember he lay in state in St. Patrick's Church prior to his funeral and we school kids were allowed to attend to pay our respects.</p>
+
+<p>The images included in this post are his official pastoral portrait from St. Patrick's, the page of tribute in the CCS yearbook from the spring of 1960,  photos from his Notre Dame yearbook, and a photo taken 20 years after his Notre Dame graduation and just before his commission as a First Lieutenant in the US Navy.</p>
+
+<p>I remember him to have been very kind and caring. He and Father Igo were my favorites as a kid.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>2022 Exhibit Addendum: Arthur F. Tait, Artist</h2>
       <hr>
       <h5>August 26, 2022 | Mick Jarvis</h5>
@@ -84,63 +153,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -181,7 +250,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Excelsior Mills Addendum</h2>
@@ -195,21 +264,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -235,50 +304,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Remembering William Cullen</h2>
-      <hr>
-      <h5>June 15, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 1</div>
-    <img src="blog/imgs/2022-06-15_cullen-william/cullen-william_01.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>We learned that Mr. William Cullen passed away on May 21. He taught English at CCS from 1947 through 1964. He will be remembered by his Chateaugay students from those years as an excellent teacher and exemplary man. </p>
-<p>Rest in peace, sir.</p>
-
-<p><a href="https://www.dignitymemorial.com/obituaries/potsdam-ny/william-cullen-10786118?fbclid=IwAR3i_2htObVFCK1LRq0IEMZtshD2re8dZzHcwL85yHeOa38b_z3ZcyxBdUg" target="new">View Online Obituary Here</a></p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [August 30, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [November 13, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
