--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,49 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Pulp Mill Locations</h2>
+      <hr>
+      <h5>November 1, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2022-11-01_pulpmilllocations/pulpmilllocations_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Working on some research tonight on the Chateaugay Pulp and High Falls Pulp companies on the Chateaugay River. Ended up placing them on a vintage map to show their locations relative to one another and to the village.</p> 
+
+<p>In the map: north is to the top, the "Four Corners" is marked with a blue dot, and I have also included the half mile racetrack that was on the fairgrounds at the end of Collins Street (the Chateaugay Agricultural Society held four annual fairs at the grounds from 1908 through 1911).</p> 
+
+<p>There was a rail spur that was built from the west end of the railyard south to the High Falls operation. Plans were discussed to extend the spur to the Chateaugay Pulp facility farther upriver, but it was never constructed.</p> 
+
+<p>The two mills required thousands of cords of wood each year to manufacture paper pulp. The logs were put on the ice at Chateaugay Lake each winter, and log drives each spring took them downriver to the two mills.</p>
+
+<p>At their busiest, the two mills employed several hundred local men. The High Falls plant closed in 1930 and the Chateaugay Pulp operation was shuttered a few years later. These large mills led the way for local employment "back in the day".</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Remembering Father Donald Gallagher</h2>
       <hr>
       <h5>October 9, 2022 | Mick Jarvis</h5>
@@ -84,39 +127,39 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 5</div>
     <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 5</div>
     <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 5</div>
     <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 5</div>
     <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 5</div>
     <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_05.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -139,7 +182,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Exhibit Addendum: Arthur F. Tait, Artist</h2>
@@ -153,63 +196,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -249,67 +292,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Excelsior Mills Addendum</h2>
-      <hr>
-      <h5>July 12, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I have been doing some follow-up research on the article I wrote on the three excelsior mills that were in town at the turn of the last century. The original article appeared in Vol. XII, Issue 3 of our newsletter in 2018. This post is not meant to be a comprehensive recap of the excelsior article but rather, additional material to supplement the original information.</p>
-
-<p>Excelsior is a little-known product today. Around the turn of the last century, it was a valuable commercial commodity.</p> 
-
-<p>The newly designed maps above will show where each of the mills was located in the vicinity of the railyard as it crossed Depot Street and paralleled Monroe Street.</p>
-
-<p>Any evidence of these mills is now long-gone but "back in the day", they represented sources of jobs and vital commercial income for Chateaugay.</p>
-
-<p>I remember an anthropology/archeology professor at SUNY Potsdam telling us that one of the main challenges that historians and researchers face is the way that modern man can alter the landscape and make it unrecognizable from its appearance in the past. I remember his quote: “You have to be ready to deal with modern man’s ability to move vast amounts of dirt!”</p>
-
-<p>In this case, we have to consider modern construction abilities as well and how the landscape of what was then the railyard and all its sidings, main tracks and buildings has changed over the years. The buildings parallel to Monroe Street that stand today are vastly different than those of 100 years ago.</p>
-
-<p>The first map shows the locations of the three mills on a set of 1912 insurance company maps. The second view is from a Google Earth image from 2022 with the mill locations superimposed over it.</p>
-
-<p>If you missed the newsletter this article appeared in, you can learn about Chateaugay’s excelsior industry. We have back issues of Vol. XII, Issue 3 (2018) available for purchase at the Archival Center.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 13, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [November 14, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
