--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,45 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Here Comes Winter</h2>
+      <hr>
+      <h5>November 14, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2022-11-14_winter/winter_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>With a bit of snow forecast for the middle of the week, I thought we would look a little farther into winter. This photo was brought into the Archival Center by Edith Lopardo.</p>
+
+<p>It is undated but was taken at the rink on River Street before the new school was built.</p>
+
+<p>Note how the ladies are clad in dress coats and hats as they watch the skaters.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Catholic Churches of Chateaugay</h2>
       <hr>
       <h5>November 5, 2022 | Mick Jarvis</h5>
@@ -84,75 +123,75 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">11 / 11</div>
     <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_11.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -189,7 +228,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Pulp Mill Locations</h2>
@@ -203,15 +242,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-11-01_pulpmilllocations/pulpmilllocations_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -226,75 +265,6 @@
 <p>The two mills required thousands of cords of wood each year to manufacture paper pulp. The logs were put on the ice at Chateaugay Lake each winter, and log drives each spring took them downriver to the two mills.</p>
 
 <p>At their busiest, the two mills employed several hundred local men. The High Falls plant closed in 1930 and the Chateaugay Pulp operation was shuttered a few years later. These large mills led the way for local employment "back in the day".</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Remembering Father Donald Gallagher</h2>
-      <hr>
-      <h5>October 9, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 5</div>
-    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 5</div>
-    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 5</div>
-    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 5</div>
-    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 5</div>
-    <img src="blog/imgs/2022-10-09_fathergallagher/fathergallagher_05.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Father Donald Gallagher was pastor of St. Patrick's Church from 1954, following the untimely death of Father Ambrose Hyland, until his death in 1959.</p>
-
-<p>He graduated from Notre Dame University. He was the Senior Class president there. He was ordained in Rome and served throughout the North Country before coming to Chateaugay.</p>
-
-<p>He served in the Pacific Theater in the US Navy during WWII.</p>
-
-<p>I remember he lay in state in St. Patrick's Church prior to his funeral and we school kids were allowed to attend to pay our respects.</p>
-
-<p>The images included in this post are his official pastoral portrait from St. Patrick's, the page of tribute in the CCS yearbook from the spring of 1960,  photos from his Notre Dame yearbook, and a photo taken 20 years after his Notre Dame graduation and just before his commission as a First Lieutenant in the US Navy.</p>
-
-<p>I remember him to have been very kind and caring. He and Father Igo were my favorites as a kid.</p>
         </div>
     </div>
 </div>
