--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,71 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Importance of Hometown Newspapers</h2>
+      <hr>
+      <h5>December 18, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>My last few weeks have been filled with research about St. Patrick’s Church and its early history. Thank you for the positive comments about my two blog posts. Much of what I used to write the two posts came either from my library and the Society Archives or from the past issues of the Chateaugay Record.</p>
+
+<p>This week, I was asked a question about the beginnings of the present American Legion building on West Main Street. I checked my files and then went to work in the issues of the Chateaugay Record to fill in some gaps in the information I did have (it was built in 1983 and the west addition was completed in 1988 – more on this organization in a future Blog Post or article in the newsletter).</p>
+
+<p>As I was reading through all those newspaper issues, I was reminded for the millionth time how important a hometown paper is to local historians. </p>
+
+<p>The surviving issues of the Chateaugay Journal (1867-1872), the Chateaugay Record (1878-1995), and the second Chateaugay Journal (1896-1909) seem to document everything that happened in Chateaugay and the surrounding area, week after week.</p>
+
+<p>For over one hundred years, Chateaugay’s daily life was reflected in the pages of its newspapers: businesses, birthdays, obituaries, marriages, celebrations, disasters, triumphs – any kind of event, good or bad, appeared in the papers’ pages.</p>
+
+<p>As we research and write our articles, so much information from the pages of the local papers makes its way into the final product. We fully realize the importance of those Chateaugay papers and the role they play in our mission. We use them just about every day. </p>
+
+<p>But, I wondered this week about Chateaugay’s local historians fifty or a hundred years from now. What will they use for research? What will they depend on for a detailed accounting of Chateaugay from 1995 and forward?</p>
+
+<p>Area newspapers routinely publish Chateaugay-related articles, and will continue to do so. However, there is no way that their reporting can approach the detail and completeness of a dedicated staff of local citizens who composed a paper every week filed with all manner of detail about life and the goings-on of our hometown. </p>
+
+<p>We appreciate the area news people who produce those regional newspapers. For example, we clip and file EVERY news article about Chateaugay from the surrounding papers in an attempt to record our present-day local story for those who will follow us. It won’t be anywhere as extensive as the Chateaugay newspapers were able to be up until 1995, but perhaps the clipping files and binders we are assembling will still provide information valuable to local researchers who are working on articles many, many years from now.</p>
+
+<p>We are continually amazed at the breadth and depth of the community history left for us by all of those local newspaper people and we frequently comment about how indebted we are to them and the newspapers they have left behind. </p>
+
+<p>What will future historians say about us and the contemporary history we leave behind for them? </p>
+
+<p>The Chateaugay newspapers we use all the time are that important to local history and research.</p>
+
+<p>Above are images of two of the oldest newspapers in our Archival Collection. They came to us from the McCoy estate.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Catholic Church Locations</h2>
       <hr>
       <h5>November 26, 2022 | Mick Jarvis</h5>
@@ -84,15 +149,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-11-26_catholiclocations/catholiclocations_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -123,7 +188,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Wooden Water Pipes in Chateaugay</h2>
@@ -137,57 +202,57 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_08.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -225,50 +290,11 @@
 
 <p>So, the first five images are of local, Chateaugay Village wooden pipes and the last three are stock images from the internet showing pipe details.</p>
 
-<p>On a personal note, my Dad was a plumber at the mines in Chateaugay as a young man. As a youngster, I often helped him when he did plumbing for others or at our home. I remember having to help thread pipes, coating the new threads with pipe dope to help seal them, and tighten the fittings using pipe wrenches, or helping to seal the bell joints in Orangeburg sewer pipes by pounding oakum into the joint and sealing it with melted lead. All very labor intensive, for sure.</p>
+<p>On a personal note, my Dad was a plumber at the mines in Lyon Mountain as a young man. As a youngster, I often helped him when he did plumbing for others or at our home. I remember having to help thread pipes, coating the new threads with pipe dope to help seal them, and tighten the fittings using pipe wrenches, or helping to seal the bell joints in Orangeburg sewer pipes by pounding oakum into the joint and sealing it with melted lead. All very labor intensive, for sure.</p>
 
 <p>When thinking about plumbing and how it has progressed from lead and iron pipes, copper, plastic, and now ultra-modern systems like Sharkbite and Pex; it is interesting to see how the plumbing trade certainly has undergone amazing changes in materials, techniques, and processes.</p>
 
 <p>And to think that the local materials used to run the earliest water pipes in the village were just the trees growing here…</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Here Comes Winter</h2>
-      <hr>
-      <h5>November 14, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 1</div>
-    <img src="blog/imgs/2022-11-14_winter/winter_01.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>With a bit of snow forecast for the middle of the week, I thought we would look a little farther into winter. This photo was brought into the Archival Center by Edith Lopardo.</p>
-
-<p>It is undated but was taken at the rink on River Street before the new school was built.</p>
-
-<p>Note how the ladies are clad in dress coats and hats as they watch the skaters.</p>
         </div>
     </div>
 </div>
@@ -279,7 +305,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
