--- a/Society_News.html
+++ b/Society_News.html
@@ -73,6 +73,71 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Importance of Hometown Newspapers</h2>
+      <hr>
+      <h5>December 18, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>My last few weeks have been filled with research about St. Patrick’s Church and its early history. Thank you for the positive comments about my two blog posts. Much of what I used to write the two posts came either from my library and the Society Archives or from the past issues of the Chateaugay Record.</p>
+
+<p>This week, I was asked a question about the beginnings of the present American Legion building on West Main Street. I checked my files and then went to work in the issues of the Chateaugay Record to fill in some gaps in the information I did have (it was built in 1983 and the west addition was completed in 1988 – more on this organization in a future Blog Post or article in the newsletter).</p>
+
+<p>As I was reading through all those newspaper issues, I was reminded for the millionth time how important a hometown paper is to local historians. </p>
+
+<p>The surviving issues of the Chateaugay Journal (1867-1872), the Chateaugay Record (1878-1995), and the second Chateaugay Journal (1896-1909) seem to document everything that happened in Chateaugay and the surrounding area, week after week.</p>
+
+<p>For over one hundred years, Chateaugay’s daily life was reflected in the pages of its newspapers: businesses, birthdays, obituaries, marriages, celebrations, disasters, triumphs – any kind of event, good or bad, appeared in the papers’ pages.</p>
+
+<p>As we research and write our articles, so much information from the pages of the local papers makes its way into the final product. We fully realize the importance of those Chateaugay papers and the role they play in our mission. We use them just about every day. </p>
+
+<p>But, I wondered this week about Chateaugay’s local historians fifty or a hundred years from now. What will they use for research? What will they depend on for a detailed accounting of Chateaugay from 1995 and forward?</p>
+
+<p>Area newspapers routinely publish Chateaugay-related articles, and will continue to do so. However, there is no way that their reporting can approach the detail and completeness of a dedicated staff of local citizens who composed a paper every week filed with all manner of detail about life and the goings-on of our hometown. </p>
+
+<p>We appreciate the area news people who produce those regional newspapers. For example, we clip and file EVERY news article about Chateaugay from the surrounding papers in an attempt to record our present-day local story for those who will follow us. It won’t be anywhere as extensive as the Chateaugay newspapers were able to be up until 1995, but perhaps the clipping files and binders we are assembling will still provide information valuable to local researchers who are working on articles many, many years from now.</p>
+
+<p>We are continually amazed at the breadth and depth of the community history left for us by all of those local newspaper people and we frequently comment about how indebted we are to them and the newspapers they have left behind. </p>
+
+<p>What will future historians say about us and the contemporary history we leave behind for them? </p>
+
+<p>The Chateaugay newspapers we use all the time are that important to local history and research.</p>
+
+<p>Above are images of two of the oldest newspapers in our Archival Collection. They came to us from the McCoy estate.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>2022 Exhibit Addendum: Arthur F. Tait, Artist</h2>
       <hr>
       <h5>August 26, 2022 | Mick Jarvis</h5>
@@ -84,63 +149,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -181,7 +246,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
@@ -195,21 +260,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -238,7 +303,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
@@ -252,27 +317,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -306,7 +371,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>CCS 2021 Pearl Harbor Exhibit</h2>
@@ -320,63 +385,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -395,7 +460,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Gates Hoit Map</h2>
@@ -409,21 +474,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -447,7 +512,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Reopening, Newsletter, Exhibits and More!</h2>
@@ -461,15 +526,15 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -503,7 +568,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
@@ -517,63 +582,63 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
 </div>
 <br>
 
@@ -619,7 +684,7 @@ To keep you all informed, here are some of the activities we have worked on over
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
