--- a/Streets.html
+++ b/Streets.html
@@ -225,7 +225,7 @@
 
 <p>So, the first five images are of local, Chateaugay Village wooden pipes and the last three are stock images from the internet showing pipe details.</p>
 
-<p>On a personal note, my Dad was a plumber at the mines in Chateaugay as a young man. As a youngster, I often helped him when he did plumbing for others or at our home. I remember having to help thread pipes, coating the new threads with pipe dope to help seal them, and tighten the fittings using pipe wrenches, or helping to seal the bell joints in Orangeburg sewer pipes by pounding oakum into the joint and sealing it with melted lead. All very labor intensive, for sure.</p>
+<p>On a personal note, my Dad was a plumber at the mines in Lyon Mountain as a young man. As a youngster, I often helped him when he did plumbing for others or at our home. I remember having to help thread pipes, coating the new threads with pipe dope to help seal them, and tighten the fittings using pipe wrenches, or helping to seal the bell joints in Orangeburg sewer pipes by pounding oakum into the joint and sealing it with melted lead. All very labor intensive, for sure.</p>
 
 <p>When thinking about plumbing and how it has progressed from lead and iron pipes, copper, plastic, and now ultra-modern systems like Sharkbite and Pex; it is interesting to see how the plumbing trade certainly has undergone amazing changes in materials, techniques, and processes.</p>
 
@@ -1502,7 +1502,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
