--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@
         <div class="blog-text">
         <p>I was stopped at the light at the Four Corners this afternoon. I happened to look over at the Hotel while waiting for the light to change.</p>
 
-<p>Many comments have been made on this page over the years about how it has fallen into ruin.
+<p>Many comments have been made on our Facebook page over the years about how it has fallen into ruin.
 However, I'm hoping these photos above prompt some memories of the place way "back in the day" and when it was a busy part of downtown.</p>
 
 <p>The first two are shots from 1935. Note the traffic light in the middle of the intersection. The hotel was called the Chateau then. The lobby had floor-to-ceiling windows so those sitting there could watch traffic and passersby and solve the problems of the world.</p>
